--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -2,3 +2,10 @@ $white:#FFF;
 $boxShadowColor:#091E3F1A;
 $colorTitle:#242A37;
 $greyColor:#898F9F;
+$black:#000000;
+$orangeColor:#FF6B08;
+$darkBlue:#091E3FCC;
+$secondWhite:#F5F7FA;
+$darkGrey:#707375;
+$boxShadowColorTwo:#1D1D1B26;
+$greyLight:#A6ABB9;
