--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -30,7 +30,7 @@
   background-color: #FFF;
   margin: 10px auto 0;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   padding-top: 30px;
 }
 
@@ -56,4 +56,101 @@
   color: #898F9F;
   font-size: 20px;
   color: #242A37;
+}
+
+.btnOptionLog {
+  width: 127px;
+  height: 40px;
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 14px;
+  color: #898F9F;
+  border: 1px solid #000000;
+  color: #242A37;
+  background: none;
+}
+
+.btnOptionSign {
+  width: 127px;
+  height: 40px;
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 14px;
+  color: #898F9F;
+  color: #FFF;
+  background-color: #FF6B08;
+  border: none;
+}
+
+.wrapperButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+}
+
+.wrapperRegistration {
+  background-image: url("../assets/images/backgroundRegistration.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 320px;
+  height: 648px;
+  margin: auto;
+}
+
+.wrapperLayout {
+  width: 320px;
+  height: 648px;
+  background-color: rgba(9, 30, 63, 0.8);
+}
+
+.btnGoogle {
+  width: 150px;
+  height: 40px;
+  background-color: #F5F7FA;
+  box-shadow: 0px 2px 2px 0px rgba(9, 30, 63, 0.1019607843);
+  border: none;
+  color: #707375;
+  font-size: 16px;
+  font-family: "Roboto";
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+}
+
+.formRegistration {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 30px;
+  gap: 30px;
+}
+
+.formRegistration label {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 14px;
+  color: #898F9F;
+  color: #FFF;
+  font-weight: 600;
+  gap: 10px;
+}
+
+.inputRegistration {
+  width: 270px;
+  height: 42px;
+  background-color: #F5F7FA;
+  border: none;
+  box-shadow: 0px 1px 2px 0px rgba(29, 29, 27, 0.1490196078) inset;
+  padding-left: 20px;
+}
+.inputRegistration::placeholder {
+  color: #A6ABB9;
 }
