--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,5 @@
 @import "./registration";
 @import "./login";
 @import "./quote-wrapper";
+@import "./instruction-library";
+@import "./library-page"
