--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -9,3 +9,6 @@ $secondWhite:#F5F7FA;
 $darkGrey:#707375;
 $boxShadowColorTwo:#1D1D1B26;
 $greyLight:#A6ABB9;
+$greyLightSecond:#F6F7FB;
+$orangeColorDarker:#D15807;
+$overlayColor:#2B2B2B1A;
