--- a/src/scss/_library-page.scss
+++ b/src/scss/_library-page.scss
@@ -1,45 +1,87 @@
-.wrapperLibrary{
+.wrapperLibrary {
     background-color: $greyLightSecond;
-    width:320px;
+    width: 320px;
     height: 588px;
-    margin:auto;
+    margin: auto;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
+
 .btnAddBook {
- width:171px;
- height: 42px;
- border: 1px solid $colorTitle;
- background: none;
+    width: 171px;
+    height: 42px;
+    border: 1px solid $colorTitle;
+    background: none;
 }
+
 .inputAddBook {
-    width:255px;
+    width: 255px;
     height: 42px;
     border: 1px solid $greyLight;
-    padding-left:15px;
+    padding-left: 15px;
     background-color: $greyLightSecond;
-    &:focus{
+
+    &:focus {
         background-color: $white;
     }
 }
-.formLibrary{
+
+.formLibrary {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
 }
+
 .formLibrary label {
     display: flex;
     flex-direction: column;
     gap: 10px;
     @include text-second;
 }
-.btnBack{
+
+.btnBack {
     background: none;
-    border:none;
+    border: none;
     text-align: start;
     margin-top: 20px;
     margin-left: 20px;
+}
+
+.formLibrary div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+@media(min-width:768px) {
+    .wrapperLibrary {
+        width: 768px;
+        height: 1025px;
+    }
+
+    .formLibrary label:first-of-type .inputAddBook {
+        width: 594px;
+    }
+
+    .formLibrary div label:nth-child(1) .inputAddBook {
+        width: 250px;
+    }
+
+    .inputAddBook {
+        width: 145px;
+    }
+
+    .formLibrary div {
+        flex-direction: row;
+    }
+
+    .formLibrary {
+        gap: 30px;
+    }
+    .btnBack{
+        display: none;
+    }
 }
