work  of adding book

--- a/src/scss/_instruction-library.scss
+++ b/src/scss/_instruction-library.scss
@@ -79,3 +79,8 @@
         display: none;
     }
 }
+@media(min-width:1440px){
+    .wrapperInstruction{
+        transform: translate(60%);
+    }
+}
