--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,4 +6,5 @@
 @import "./login";
 @import "./quote-wrapper";
 @import "./instruction-library";
-@import "./library-page"
+@import "./library-page";
+@import "./library-intention";
