--- a/src/scss/_library-intention.scss
+++ b/src/scss/_library-intention.scss
@@ -1,10 +1,26 @@
+.mainWrapperIntention {
+    width: 320px;
+    height: 690px;
+    background-color: $greyLightSecond;
+    margin: auto;
+}
+
+.mainTitleIntention {
+    margin-left: 25px;
+    padding-top: 30px;
+    @include title;
+}
+
 .wrapperIntention {
     width: 270px;
     height: 178px;
     background-color: $white;
     margin: auto;
     box-shadow: 0px 2px 3px 0px $boxShadowColor;
-
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
 }
 
 .wrapperTitle {
@@ -16,11 +32,11 @@
 }
 
 .wrapperDescription {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    gap: 13px;
+    display: grid;
+    grid-template-columns: 60px auto;
+    row-gap: 6px;
+    column-gap: 8px;
+    margin: 10px auto;
 }
 
 .title-intention {
@@ -29,7 +45,26 @@
     font-weight: 500;
 }
 
+.subtitle-intention {
+    @include text-second;
+    font-size: 12px;
+}
+
+.info-intention {
+    @include text-second;
+    font-size: 12px;
+    color: $colorTitle;
+}
+
+.intentionHeader {
+    display: none;
+}
+
 @media(min-width:768px) {
+    .mainWrapperIntention {
+        width: 768px;
+    }
+
     .wrapperIntention {
         width: 678px;
         height: 62px;
@@ -38,10 +73,42 @@
         align-items: center;
     }
 
-    .wrapperDescription {
-        flex-direction: row;
+    .intentionHeader {
+        display: grid;
+        grid-template-columns: 370px 1fr 90px 100px;
+        align-items: center;
+        margin: 20px 20px 0px 50px;
     }
-    .wrapperTitle{
-        margin-top:0;
+
+    .subtitle-intention {
+        display: none;
+    }
+
+
+    .title-intention {
+        width: 240px;
+        font-size: 14px;
+    }
+
+    .wrapperTitle {
+        margin-top: 0;
+        align-items: center;
+    }
+
+    .wrapperDescription {
+        grid-template-columns: 120px 1fr 0px 0px;
+        column-gap: 53px;
+        margin: 0px 0px 0px 70px;
+    }
+}
+
+@media(min-width:1440px) {
+    .wrapperIntention {
+        width: 1202px;
+        margin: 0 0 0 40px;
+    }
+
+    .mainWrapperIntention {
+        margin: 0;
     }
 }
