--- a/src/scss/_library-page.scss
+++ b/src/scss/_library-page.scss
@@ -34,7 +34,6 @@
     align-items: center;
     gap: 20px;
 }
-
 .formLibrary label {
     display: flex;
     flex-direction: column;
@@ -55,8 +54,13 @@
     flex-direction: column;
     gap: 20px;
 }
-
+.library-intention {
+    display: none;
+}
 @media(min-width:768px) {
+    .library-intention {
+        display: block;
+    }
     .wrapperLibrary {
         width: 768px;
         height: 1025px;
