finish work of drag and drop

--- a/src/scss/_library-page.scss
+++ b/src/scss/_library-page.scss
@@ -63,7 +63,7 @@
     }
     .wrapperLibrary {
         width: 768px;
-        height: 1025px;
+        height: auto;
     }
 
     .formLibrary label:first-of-type .inputAddBook {
