--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,4 +8,5 @@
 @import "./instruction-library";
 @import "./library-page";
 @import "./library-intention";
-@import "./modal-resume"
+@import "./modal-resume";
+@import "./star";
