--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/utils";
 @import "./placeholder/placeholder";
+@import "./container";
 @import  "./header";
 @import "./info-page";
 @import "./registration";
