--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -13,3 +13,5 @@ $greyLightSecond:#F6F7FB;
 $orangeColorDarker:#D15807;
 $overlayColor:#2B2B2B1A;
 $greyDarkSecond:#6D7A8D;
+$greyLightThird:#F5F7FA;
+$veryLightGrey: #E0E5EB;
