--- a/src/scss/_account.scss
+++ b/src/scss/_account.scss
@@ -1,4 +1,72 @@
 .wrapperAccount {
-    display:"flex";
+    display: flex;
     flex-direction: column;
+}
+
+.backgroundWrapper {
+    background-image: url("../assets/images/backgroundWrapperAccount.jpg");
+    width: 320px;
+    height: 130px;
+    background-size: cover;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.accountImage {
+    border-radius: 50%;
+    width: 123px;
+    height: 123px;
+    border: none;
+    position: relative;
+    top: 50px;
+    padding:0;
+}
+.imageDefaultAccount {
+    width:123px;
+    height:123px;
+}
+.btnChangeImage {
+    position: absolute;
+    right: 0;
+    border-radius: 50%;
+    border: none;
+    width: 30px;
+    height: 30px;
+    background-color: $orangeColor;
+    color:$white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.userName {
+    @include text-second;
+}
+.containerAccount {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap:20px;
+}
+.btnEdit {
+    width:200px;
+    height:50px;
+    border-radius: 10px;
+    border:none;
+    color: $white;
+    background-color: $orangeColor;
+    font-family:"Montserrat"
+}
+@media(min-width:768px){
+    .backgroundWrapper{
+        width: 768px;
+        height: 210px;
+    }
+    .accountImage {
+      top: 120px;
+    }
+}
+@media(min-width:1440px) {
+    
 }
